--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,22 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   </head>
 
   <body>
+
+  <div class="header">
+    <div class="home">
+      <%= link_to "Wikinimous", articles_path %>
+    </div>
+    <div class="new">
+      <%= link_to "New article", new_article_path %>
+    </div>
+
+  </div>
+  <div class="container">
     <%= yield %>
+  </div>
   </body>
 </html>
