--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,7 @@
   <ul>
     <% @articles.each do |article| %>
       <h2><%= link_to article.title, article_path(article) %></h2>
-      <p><%= article.content %></p>
+      <p><%= Kramdown::Document.new(article.content).to_html.html_safe %></p>
       <% end %>
   </ul>
 
