--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 
   <h2><%= @article.title %></h2>
-  <p><%= @article.content %></p>
+  <p><%= Kramdown::Document.new(@article.content).to_html.html_safe %></p>
   <%= link_to "Edit", edit_article_path(@article) %>
   <%= link_to "Delete", article_path(@article), method: :delete %>
 
